core/jot/deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  notes-backend
  namespace: jot
  labels:
    app:  notes-backend
spec:
  selector:
    matchLabels:
      app: notes-backend
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  notes-backend
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  notes-backend
        image:  clanktron/notes-backend:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          tcpSocket:
            port: 4000
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
            # readinessProbe:
            #   httpGet:
            #     path: /_status/healthz
            #     port: 4000
            #   initialDelaySeconds: 5
            #   timeoutSeconds: 2
            #   successThreshold: 1
            #   failureThreshold: 3
            #   periodSeconds: 10
        ports:
        - containerPort:  4000
          name:  notes-backend
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/US/Pacific
      restartPolicy: Always
