core/jot/interface.yml
apiVersion: v1
kind: Pod
metadata:
  name: cockroachdb-client-secure
spec:
  serviceAccountName: jot-sa
  containers:
  - name: cockroachdb-client-secure
    image: cockroachdb/cockroach:v22.2.2
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - name: client-certs
      mountPath: /cockroach/cockroach-certs/
    command:
    - sleep
    - "2147483648" # 2^31
  terminationGracePeriodSeconds: 0
  volumes:
  - name: client-certs
    projected:
        sources:
          - secret:
              name: jot-node
              items:
                - key: ca.crt
                  path: ca.crt
          - secret:
              name: jot-root
              items:
                - key: tls.crt
                  path: client.root.crt
                - key: tls.key
                  path: client.root.key
        defaultMode: 256

# Connect with 
# kubectl exec -it cockroachdb-client-secure \ 
#  - interface.yml
# -- ./cockroach sql \ 
# --certs-dir=/cockroach/cockroach-certs \ 
# --host=cockroachdb-public
