core/jot/api-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jot-api
  namespace: jot
  annotations:
    kubernetes.io/ingress.class: traefik-crd-external
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`jot.claytonc.dev`)
    kind: Rule
    services:
    - name: notes-backend
      port: 4000
  tls:
    secretName: jot-tls
