core/jot/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-backend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    flame.pawelmalak/icon: notes-outline
    flame.pawelmalak/name: notesapi
    flame.pawelmalak/type: app
    flame.pawelmalak/url: https://notify.claytonc.dev
    traefik.ingress.kubernetes.io/router.entrypoints: notesapi, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
      - notify.claytonc.dev
    secretName: notes-backend-tls
  rules:
  - host: notify.claytonc.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notes-backend
            port:
              number: 4000
