core/jot/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jot-db
  namespace: cockroachdb
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik-internal
  tls:
  - hosts:
      - cockroachdb.claytonc.dev
    secretName: cockroach-tls
  rules:
  - host: cockroachdb.claytonc.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service1
            port:
              number: 80
---
